update ai workflow batch
